# mediguide-ai

./: .gitignore  GEMINI_RECOMMENDATIONS_PLAN.md  LLM_GUIDELINES.md  PROJECT_COMPLETE_CONTEXT.md  README.md  feature_prompts (1).md  implementation_plan.md  implementation_plan_Frontend.md  main.py  mentor_audit.md  pyproject.toml  stichdesign.md
SVG PLAN/: SVG_INTEGRATION_PLAN.md
backend/: debug_vertex.py  main.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  utils.py
backend/app/db/: __init__.py  supabase_client.py
backend/app/middleware/: __init__.py  audit_middleware.py
backend/app/models/: __init__.py  chat_models.py  hospital_models.py  navigation_models.py  scheme_models.py  user_models.py
backend/app/prompts/: __init__.py  scheme_prompt.txt  summary_prompt.txt  system_prompt.txt  triage_prompt.txt
backend/app/routers/: __init__.py  appointment.py  caregiver.py  chat.py  hospital.py  navigation.py  profile.py  scheme.py  triage.py  voice.py
backend/app/services/: __init__.py  audit_service.py  caregiver_service.py  fcm_service.py  gemini_service.py  hospital_service.py  navigation_service.py  rag_service.py  sarvam_service.py  scheme_service.py  triage_service.py
frontend/: index.html  package.json  tailwind.config.js  vercel.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
supabase/: run_seed.py  schema.sql  schema_audit_logs.sql  seed_appointments.sql  seed_hospitals.sql  seed_indoor_map.sql  seed_indoor_map_all.sql  seed_ruby_hall_map.sql  seed_schemes.sql
(+52 files in other folders)
