[project]
name = "mediguide-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "firebase-admin>=7.4.0",
    "google-cloud-aiplatform>=1.147.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
